--- a/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
+++ b/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\CreateShader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
