--- a/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj.filters
+++ b/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj.filters
@@ -21,10 +21,16 @@
     <ClCompile Include="Source\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\LegacyTriangles.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\CreateShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\shader.shader" />
   </ItemGroup>
 </Project>
