--- a/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
+++ b/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
@@ -150,16 +150,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="ProjectReferences\GitHub_Commit_Notes.txt" />
     <Text Include="ProjectReferences\ProjectSolutionChanges.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\IndexBuffer.cpp" />
+    <ClCompile Include="Source\Renderer.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\LegacyTriangles.h" />
+    <ClCompile Include="Source\VertexBuffer.cpp" />
+    <ClCompile Include="Source\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\IndexBuffer.h" />
+    <ClInclude Include="Source\Renderer.h" />
     <ClInclude Include="Source\CreateShader.h" />
     <ClInclude Include="Source\DrawSquare.h" />
     <ClInclude Include="Source\GL_ErrorHandling.h" />
+    <ClInclude Include="Source\VertexBuffer.h" />
+    <ClInclude Include="Source\VertexArray.h" />
+    <ClInclude Include="Source\VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\basic.shader" />
