--- a/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj.filters
+++ b/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="Source\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Renderer.h">
@@ -58,6 +61,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
