--- a/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
+++ b/OpenGL_Practice_1/OpenGL_Practice_1.vcxproj
@@ -160,17 +160,21 @@
     <ClCompile Include="Source\Renderer.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\LegacyTriangles.h" />
+    <ClCompile Include="Source\Vender\stb_image\stb_image.cpp" />
     <ClCompile Include="Source\VertexBuffer.cpp" />
     <ClCompile Include="Source\VertexArray.cpp" />
+    <ClCompile Include="Source\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Functions.h" />
     <ClInclude Include="Source\Shader.h" />
     <ClInclude Include="Source\IndexBuffer.h" />
     <ClInclude Include="Source\Renderer.h" />
+    <ClInclude Include="Source\Vender\stb_image\stb_image.h" />
     <ClInclude Include="Source\VertexBuffer.h" />
     <ClInclude Include="Source\VertexArray.h" />
     <ClInclude Include="Source\VertexBufferLayout.h" />
+    <ClInclude Include="Source\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\basic.shader" />
